# class_frontend

./: .gitignore  Procfile  README.md  README.old.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
class_backend/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  apps.py  models.py  serializers.py  views.py
main_app/migrations/: 0001_initial.py
public/: index.html
src/: App.js  index.js  serviceWorker.js
src/components/: AddAssignmentModal.js  AddClassModal.js  AppBar.js  AssignmentCard.js  AssignmentForm.js  ClassCard.js  ClassForm.js  Cloud.css  FooterBar.js  Layout.js  LoginForm.js  MakeClassForm copy.js  ProLayout.js  SignupForm.js  UpdateAssignmentForm.js  UpdateAssignmentModal.js  UpdateClassForm.js  UpdateClassModal.js  VideoPlayer.js
src/components/Assignments/: AddAssignmentModal.js  AssignmentCard.js  AssignmentForm.js  AssignmentList.js  AssignmentListModal.js  UpdateAssignmentForm.js  UpdateAssignmentModal.js
src/components/Auth/: LoginForm.js  SignupForm.js
src/components/Classes/: AddClassModal.js  ClassCard.js  ClassForm.js  ClassList.js  ClassListModal.js  StudentList.js  StudentListModal.js  UpdateClassForm.js  UpdateClassModal.js
src/components/Cloudinary/: CloudForm.js  CloudMediaCard.js  Cloudinary.js
src/components/Partials/: AppBar.js  FooterBar.js  Layout.js  ProLayout.js
src/components/Profile/: ProfileBox.js  ProfileForm.js  ProfileModal.js
src/pages/: About.js  Assignment.js  Class.js  FourOhFour.js  Grade.js  Home.js  Login.js  Profile.js  Signup.js
(+1 files in other folders)
